# AI-Agents

./: .gitignore  pyproject.toml
01_Multi_LLM_Workflow/: .gitignore  01.ipynb
02_Deep_Research_Agent/: .env.example  README.md  requirements.txt  streamlit_app.py
02_Deep_Research_Agent/.streamlit/: secrets.toml
02_Deep_Research_Agent/app/: main.py
03_Multi_LLM_Judgement/: 03.ipynb
04_Job_Searcher_Agent/: README.md  aa.py  app.py  requirements.txt  scrape_worker.py  test_endpoints.py  test_indeed.py  test_llm_fallback.py  test_responses.py  test_scraper_event_loop.py
04_Job_Searcher_Agent/config/: settings.py
04_Job_Searcher_Agent/controllers/: __init__.py  export_controller.py  search_controller.py
04_Job_Searcher_Agent/jobspy_pkg/: jobspy_pckge.ipynb
04_Job_Searcher_Agent/models/: __init__.py  job.py  search_config.py  site_config.py
04_Job_Searcher_Agent/output/: applied.json  jobs_20260331_220806.csv  jobs_20260331_220946.csv  jobs_20260331_222115.csv  jobs_20260331_233714.csv  llm_cache.json  monster_state.json  naukri_state.json  storage_state.json
04_Job_Searcher_Agent/services/: applied_store.py
04_Job_Searcher_Agent/utils/: __init__.py  date_utils.py  helpers.py  llm_cache.py  resume_parser.py  site_transforms.py
04_Job_Searcher_Agent/views/: __init__.py  components.py
05_Code_Review_Agent/: README.md  app.py  code_review_agent.py
05_Code_Review_Agent/data/: review_history.json
05_Code_Review_Agent/tools/: __init__.py  multi_file_analyzer.py  quality_checker.py  security_checker.py  syntax_analyzer.py
(+40 files in other folders)
