[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crypto>=1.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "ipykernel>=7.2.0",
    "jose>=1.0.0",
    "openai>=2.30.0",
    "pydantic[email]>=2.12.5",
    "uvicorn>=0.42.0",
    "anthropic>=0.49.0",
]
